--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,24 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.16.0
+  firebase_auth: ^4.10.0
+  firebase_storage: ^11.2.7
+  cloud_firestore: ^4.9.2
+  hooks_riverpod: ^2.4.0
+  font_awesome_flutter: ^10.5.0
+  flutter_facebook_auth: ^6.0.2
+  google_sign_in: ^6.1.5
+  image_picker: ^1.0.4
+  image: ^4.1.2
+  flutter_hooks: ^0.20.1
+  collection: ^1.17.2
+  intl: ^0.18.1
+  video_thumbnail: ^0.5.3
+  video_player: ^2.7.2
+  lottie: ^2.6.0
+  share_plus: ^7.1.0
+  url_launcher: ^6.1.14
 
 dev_dependencies:
   flutter_test:
