--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,7 +2,7 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-<key>LSApplicationQueriesSchemes</key>
+    <key>LSApplicationQueriesSchemes</key>
     <array>
       <string>fbapi</string>
       <string>fbapi20130214</string>
@@ -44,6 +44,10 @@
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+    <string>instagram clone would like to access your photo</string>
+    <key>NSCameraUsageDescription</key>
+    <string>instagram clone would like to access your camera</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
