--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   font_awesome_flutter: ^10.5.0
   flutter_facebook_auth: ^6.0.2
   google_sign_in: ^6.1.5
-  image_picker: ^1.0.4
+  image_picker: ^0.8.9
   image: ^4.1.2
   flutter_hooks: ^0.20.1
   collection: ^1.17.2
@@ -53,6 +53,8 @@ dependencies:
   lottie: ^2.6.0
   share_plus: ^7.1.0
   url_launcher: ^6.1.14
+  firebase_app_check: ^0.1.5+2
+  cached_network_image: ^3.3.0
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +66,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  firebase_auth_platform_interface: ^6.19.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
